--- a/index.html
+++ b/index.html
@@ -1,74 +1,312 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Time Travel Date Simulator</title>
-  <link rel="stylesheet" href="assets/css/app.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Retro Keypad Countdown</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #111;
+            font-family: 'Courier New', Courier, monospace;
+            color: white;
+            background-image: url('https://www.transparenttextures.com/patterns/black-twill.png'); /* Retro texture */
+            overflow: hidden;
+        }
+
+        .container {
+            text-align: center;
+            max-width: 1200px;
+            padding: 20px;
+            z-index: 1;
+            position: relative;
+        }
+
+        .time-circuit {
+            display: grid;
+            grid-template-columns: repeat(5, auto);
+            gap: 20px;
+            align-items: center;
+            background: linear-gradient(145deg, #333, #000);
+            padding: 40px;
+            border-radius: 10px;
+            box-shadow: 0 0 30px rgba(0, 255, 255, 0.4), inset 0 0 10px #000;
+            margin-bottom: 20px;
+            border: 3px solid #ff6600;
+        }
+
+        .time-circuit div {
+            text-align: center;
+        }
+
+        .label {
+            font-size: 1.2em;
+            color: #ff6600;
+            margin-bottom: 10px;
+            text-shadow: 0 0 5px #ff0000;
+        }
+
+        .display {
+            font-size: 4em;
+            background-color: #222;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: inset 0 0 15px #000, 0 0 10px #ff6600;
+            width: 160px;
+            font-family: 'Digital-7 Mono', monospace;
+        }
+
+        .display.red { color: #ff3300; }
+        .display.green { color: #00ff00; }
+        .display.yellow { color: #ffff00; }
+
+        .keypad-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-top: 20px;
+            background-color: #3b3b3b;
+            padding: 20px;
+            border-radius: 10px;
+            border: 3px solid #444;
+            box-shadow: 0 0 20px #000;
+            width: 200px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .indicator-lights {
+            display: flex;
+            flex-direction: row;
+            gap: 10px;
+            margin-bottom: 20px;
+        }
+
+        .indicator-light {
+            width: 15px;
+            height: 15px;
+            border-radius: 50%;
+            background-color: #444;
+            box-shadow: 0 0 5px #000;
+        }
+
+        .indicator-light.red { background-color: #ff0000; }
+        .indicator-light.yellow { background-color: #ffff00; }
+        .indicator-light.green { background-color: #00ff00; }
+
+        .keypad {
+            display: grid;
+            grid-template-columns: repeat(3, 50px);
+            gap: 10px;
+        }
+
+        .key {
+            width: 50px;
+            height: 50px;
+            background-color: #444;
+            border: 2px solid #777;
+            border-radius: 5px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 1.5em;
+            cursor: pointer;
+            color: white;
+            text-shadow: 0 0 5px #000;
+            box-shadow: inset 0 0 8px #000, 0 0 5px rgba(0, 0, 0, 0.5);
+        }
+
+        .key:active {
+            background-color: #222;
+            box-shadow: inset 0 0 10px #000;
+        }
+
+        .back-button {
+            display: block;
+            margin-top: 20px;
+            background-color: #ff6600;
+            color: #fff;
+            border: none;
+            padding: 15px 30px;
+            font-size: 1.5em;
+            cursor: pointer;
+            border-radius: 10px;
+            box-shadow: 0 0 20px #ff6600, inset 0 0 8px #000;
+            transition: 0.3s;
+        }
+
+        .back-button:hover {
+            background-color: #ff3300;
+            box-shadow: 0 0 30px #ff3300;
+        }
+
+        /* Fullscreen GIF overlay */
+        .gif-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: black;
+            display: none;
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
+
+        .gif-overlay img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Enter Historical Event Details</h1>
-    <form id="historical-event-form">
 
-      <div class="form-container">
-          <!-- Date Fields (Separate for Year, Month, Day) -->
-          <div class="input-field">
-                <label for="year">Year:</label>
-                <input class="year" type="number" id="year" name="year" min="1500" max="2024" required>
-          </div>
+<div class="container">
+    <h1 style="color: #ff6600; text-shadow: 0 0 8px #ff0000;">Back to the Future Countdown</h1>
 
-          <div class="input-field">
-                <label for="month">Month:</label>
-                <input type="number" id="month" name="month" min="1" max="12">
-          </div>
+    <!-- Time Circuit Displays -->
+    <div class="time-circuit">
+        <div>
+            <div class="label">YEAR</div>
+            <div class="display red" id="year">1985</div>
+        </div>
+        <div>
+            <div class="label">MONTH</div>
+            <div class="display red" id="month">10</div>
+        </div>
+        <div>
+            <div class="label">DAY</div>
+            <div class="display red" id="day">26</div>
+        </div>
+        <div>
+            <div class="label">HOUR</div>
+            <div class="display red" id="hour">01</div>
+        </div>
+        <div>
+            <div class="label">MIN</div>
+            <div class="display red" id="minute">21</div>
+        </div>
+    </div>
 
-          <div class="input-field">
-                <label for="day">Day:</label>
-                <input type="number" id="day" name="day" min="1" max="31">
-          </div>
-      </div>
-      <!-- Submit Button -->
-      <button type="submit">Submit</button>
-    </form>
-  </div>
+    <!-- Keypad Container -->
+    <div class="keypad-container">
+        <div class="indicator-lights">
+            <div class="indicator-light red"></div>
+            <div class="indicator-light yellow"></div>
+            <div class="indicator-light green"></div>
+        </div>
+        <div class="keypad">
+            <div class="key" onclick="insertNumber(1)">1</div>
+            <div class="key" onclick="insertNumber(2)">2</div>
+            <div class="key" onclick="insertNumber(3)">3</div>
+            <div class="key" onclick="insertNumber(4)">4</div>
+            <div class="key" onclick="insertNumber(5)">5</div>
+            <div class="key" onclick="insertNumber(6)">6</div>
+            <div class="key" onclick="insertNumber(7)">7</div>
+            <div class="key" onclick="insertNumber(8)">8</div>
+            <div class="key" onclick="insertNumber(9)">9</div>
+            <div class="key" onclick="insertNumber(0)">0</div>
+            <div class="key" onclick="backspace()">⌫</div>
+            <div class="key" onclick="clearInput()">C</div>
+        </div>
+    </div>
+    <button class="back-button" onclick="triggerGifEffect()">Set Countdown</button>
+</div>
 
-    <script>
-        document.getElementById('historical-event-form').addEventListener('submit', async (event) => {
-            event.preventDefault();
+<!-- GIF Overlay for Transition -->
+<div class="gif-overlay" id="gifOverlay">
+    <img src="C:\Users\12109\Downloads\DeLorean Flames.gif" alt="Time Travel Transition" id="timeTravelGif">
+</div>
 
-            const formData = {
-              // event_name: document.getElementById('event-name').value,
-              year: document.getElementById('year').value,
-              month: document.getElementById('month').value,
-              day: document.getElementById('day').value,
-              // location: document.getElementById('location').value,
-              // historical_figures: document.getElementById('historical-figures').value,
-            };
+<script>
+    let inputValues = ['', '', '', '', '']; // [year, month, day, hour, minute]
+    let currentIndex = 0;
 
-            try {
-              const response = await fetch('http://localhost:3000/search-event', {
-                method: 'POST',
-                headers: {
-                  'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(formData)
-              });
-
-              if (response.ok) {
-                const result = await response.json();
-                // Redirect to display the event page with the retrieved data
-                window.location.href = `http://localhost:3000/event-page/${result.event.id}`;
-              } else if (response.status === 404) {
-                console.error('Event not found.');
-                alert('Event not found. Please try another search.');
-              } else {
-                console.error('Failed to retrieve event.');
-              }
-            } catch (error) {
-              console.error('Error:', error);
+    function insertNumber(num) {
+        if (currentIndex < inputValues.length) {
+            inputValues[currentIndex] += num;
+            updateDisplay();
+            
+            if (checkFieldComplete(currentIndex)) {
+                currentIndex++;
             }
-          });
-    </script>
+        }
+    }
+
+    function checkFieldComplete(index) {
+        const lengths = [4, 2, 2, 2, 2];
+        return inputValues[index].length === lengths[index];
+    }
+
+    function backspace() {
+        if (currentIndex >= 0) {
+            if (inputValues[currentIndex].length === 0 && currentIndex > 0) {
+                currentIndex--;
+            }
+            inputValues[currentIndex] = inputValues[currentIndex].slice(0, -1);
+            updateDisplay();
+        }
+    }
+
+    function clearInput() {
+        inputValues = ['', '', '', '', ''];
+        currentIndex = 0;
+        updateDisplay();
+    }
+
+    function updateDisplay() {
+        const [year, month, day, hour, minute] = inputValues;
+        document.getElementById("year").textContent = year || "1985";
+        document.getElementById("month").textContent = month || "10";
+        document.getElementById("day").textContent = day || "26";
+        document.getElementById("hour").textContent = hour || "01";
+        document.getElementById("minute").textContent = minute || "21";
+    }
+
+    async function triggerGifEffect() {
+    const gifOverlay = document.getElementById("gifOverlay");
+    const timeTravelGif = document.getElementById("timeTravelGif");
+
+    // Reset the GIF source to restart the animation
+    timeTravelGif.src = timeTravelGif.src;
+
+    // Show the GIF overlay
+    gifOverlay.style.display = "flex";
+
+    // Get input values
+    const [year, month, day, hour, minute] = inputValues;
+
+    try {
+        // Fetch the event ID from the server based on date and time
+        const response = await fetch(`http://localhost:3000/event?year=${year}&month=${month}&day=${day}&hour=${hour}&minute=${minute}`);
+        const eventData = await response.json();
+
+        if (response.ok && eventData) {
+            const eventId = eventData.id;
+
+            // Redirect to the event details page with the fetched event ID
+            setTimeout(() => {
+                gifOverlay.style.display = "none";
+                window.location.href = `/event-details.html?eventId=${eventId}`;
+            }, 3000); // Adjust the duration based on your GIF's length
+        } else {
+            console.error("Event not found for the given date and time.");
+            gifOverlay.style.display = "none";
+            alert("No event found for the entered date and time.");
+        }
+    } catch (error) {
+        console.error("Error fetching event ID:", error);
+        gifOverlay.style.display = "none";
+        alert("Failed to fetch event data.");
+    }
+}
+
+</script>
 </body>
 </html>
