--- a/public/DoI.html
+++ b/public/DoI.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="DoI.css">
     <title>Declaration of Independence</title>
+    <link rel="stylesheet" href="assets/css/app.css">
 </head>
 <body>
     <div class="scroll">
